@@ -1,4 +1,4 @@
-.TH HDPARM 8 "August 2009" "Version 9.23"
+.TH HDPARM 8 "August 2009" "Version 9.24"
 
 .SH NAME
 hdparm \- get/set SATA/IDE device parameters
